--- a/apps/core/templates/core/components/model_form.html
+++ b/apps/core/templates/core/components/model_form.html
@@ -49,10 +49,10 @@
         {% endfor %}
         <div class="row">
             <div class="col-6 offset-3 text-center">
-                <a href="{{ cancel_url }}" class="btn  btn-raised-black">
+                <a href="{{ cancel_url }}" class="btn  btn-raised-danger">
                     <i class="material-icons">delete</i>&nbsp;Cancelar
                 </a>
-                <button type="submit" class="btn  btn-raised-black">
+                <button type="submit" class="btn  btn-raised-primary">
                     <i class="material-icons">save</i>&nbsp;&nbsp;Salvar&nbsp;&nbsp;
                 </button>
             </div>
