--- a/apps/core/templates/core/crud/form.html
+++ b/apps/core/templates/core/crud/form.html
@@ -18,7 +18,7 @@
 {% block content_header %}
     <div class="row my-2">
         <div class="col-3 offset-9 text-end">
-            <a href="{{ url_list }}" class="btn btn-raised-black">
+            <a href="{{ url_list }}" class="btn btn-raised-primary">
                 <i class="material-icons">list</i>&nbsp;Listar {{ model_plural }}
             </a>
         </div>
