--- a/apps/core/templates/core/layout/nav.html
+++ b/apps/core/templates/core/layout/nav.html
@@ -1,4 +1,4 @@
-<nav class="top-app-bar navbar navbar-expand navbar-dark bg-dark">
+<nav class="top-app-bar navbar navbar-expand navbar-dark bg-primary">
     <div class="container-fluid px-4">
         <!-- Drawer toggle button-->
         <button class="btn btn-lg btn-icon order-1 order-lg-0"
