--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -31,11 +31,13 @@
     <div id="layoutDrawer_content">
         <main>
             <!-- Page header-->
-            <header class="bg-info">
+            <header class="bg-transparent text-dark">
                 <div class="container-xl px-5">
-                    <div class="text-white py-3 mb-0 display-5">
+                    <div class="py-3 mb-0 display-5">
                         {% block page_title %}{% endblock %}
-                        <div class="text-white-50 display-6 border-0">{% block page_description %}{% endblock %}</div>
+                        <div class="display-6 border-0 text-gray">
+                            {% block page_description %}{% endblock %}
+                        </div>
                     </div>
                 </div>
             </header>
